
<resources>

<string name="app_name">Tech Rootkit</string>
<string name="hello_world">Hello world!</string>
<string name="menu_settings">Settings</string>
<string name="title_activity_main">MainActivity</string>


<string name="pref_send_report">Send crash reports</string>
<string name="pref_send_report_summary">Helps to fix bugs</string>
<string name="pref_sync_frequency">Sync frequency</string>
<string name="pref_sync_frequency_summary">Set the sync frequency</string>
<string name="pref_user_name">Set username</string>
<string name="pref_user_name_summary">Set your username</string>

<string name="pref_user_profile">User Profile</string>
<string name="pref_update_setting">Update Settings</string>
    <string name="settings_header">Settings</string>
    <string name="about_header">About</string>
    <string name="pref_srgb_summary">Enable sRGB mode</string>
    <string name="pref_srgb_title">sRGB Mode</string>
    <string name="about_dev_summary">Raj Parekh</string>
    <string name="about_dev_title">Developer</string>
    <string name="email_dev_summary">raj.parekh07@gmail.com</string>
    <string name="email_dev_title">Email</string>
    <string name="about_app_version_summary">1.0</string>
    <string name="about_app_version_title">Rootkit Version</string>
    <string name="xda_dev_title">XDA</string>
    <string name="xda_dev_summary">raj.parekh07</string>


</resources>